# hand-tracking-sdk

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/api/: hand_tracking_sdk.rst  index.rst
examples/: jitter_report.py  log_to_jsonl.py  stream_frames.py  video_host_service.py  visualize_rerun.py
examples/video/: BETA_TEST.md  README.md  _common.py  _retarget.py  _tracking.py  aloha_video_host.py  g1_video_host.py  inspire_hand_video_host.py  inspire_retarget_video_hsot.py  inspire_video_host.py  mujoco_video_host.py  shadow_hand_video_host.py  test_pattern_video_host.py  webcam_video_host.py
examples/video/assets/aloha/: README.md  aloha.xml  keyframe_ctrl.xml  keyframe_no_act.xml  scene.xml
examples/video/assets/inspire/: inspire_bimanual.xml  inspire_left.xml  inspire_right.xml  scene_bimanual.xml
examples/video/assets/shadow_hand/: left_hand_teleop.xml  right_hand.xml  right_hand_teleop.xml  scene_bimanual.xml  scene_retarget.xml
examples/video/assets/unitree_g1/: g1_with_hands.xml  scene_with_hands.xml
src/hand_tracking_sdk/: __about__.py  __init__.py  _compat.py  client.py  constants.py  convert.py  exceptions.py  frame.py  models.py  parser.py  teleop.py  transport.py  visualization.py
src/hand_tracking_sdk/video/: __init__.py  schemas.py  service.py  signaling.py  sources.py  webrtc_sender.py
tests/: test_client.py  test_convert.py  test_frame_assembler.py  test_joint_accessors.py  test_parser.py  test_ros_readiness.py  test_sim_teleop.py  test_teleop.py  test_transport.py  test_video_schemas.py  test_video_service.py  test_visualization.py
