[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hand-tracking-sdk"
version = "0.1.0"
description = "Python SDK for Hand Tracking Streamer telemetry"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Hand Tracking SDK Contributors" }
]
keywords = ["vr", "hand-tracking", "quest", "teleoperation", "robotics", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering"
]
dependencies = [
    "lark>=1.3.1",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/wengmister/hand-tracking-streamer"
Documentation = "https://github.com/wengmister/hand-tracking-streamer/blob/main/CONNECTIONS.md"
Source = "https://github.com/wengmister/hand-tracking-streamer"
Issues = "https://github.com/wengmister/hand-tracking-streamer/issues"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0"
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/hand_tracking_sdk"]
