[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hand-tracking-sdk"
version = "1.0.2"
description = "Python SDK for Hand Tracking Streamer telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Hand Tracking SDK Contributors" }
]
keywords = ["vr", "hand-tracking", "quest", "teleoperation", "robotics", "sdk"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering"
]
dependencies = [
    "lark>=1.3.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
visualization = [
  "rerun-sdk>=0.17.0"
]

[project.urls]
Homepage = "https://github.com/wengmister/hand-tracking-sdk"
Documentation = "https://hand-tracking-sdk.readthedocs.io/"
Source = "https://github.com/wengmister/hand-tracking-sdk"
Issues = "https://github.com/wengmister/hand-tracking-sdk/issues"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "sphinx>=7.4.0"
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/hand_tracking_sdk"]
